--- a/css/layout-l.css
+++ b/css/layout-l.css
@@ -58,7 +58,7 @@
         padding-right: 10%;
         padding-left: 10%;
         margin-left: 5%;
-        border-radius: 2%;
+        border-radius: 10% 10% 10% 10% / 100% 100% 100% 100% ;
         font-weight: bold;
     };
    
@@ -268,7 +268,7 @@ margin: 1%;
 }
 .pricing-body-item-side,.pricing-body-item-middle{
     display: block;
-    border-radius: 2%;
+    border-radius: 2% ;
     margin:auto;
     margin-top:5%;
     margin-bottom:5%;
@@ -289,29 +289,34 @@ margin: 1%;
 }
 .offer-item{
     padding-top: 5%;
-    padding-bottom: 15%;
+    margin: auto;
+    margin-bottom: 10%;
 }
 .pricing-body-item-middle{
     padding-top:7%;
 }
 .pricing-button{
-    width:100%;
-    padding-top:5%;
-    padding-bottom:5%;
-    margin-top:10%;
+    width:80%;
+    margin: 0 auto;
+    margin-left: 10%;
+    margin-top: 10%;
+    margin-bottom: 10%;
+    padding-top:10%;
+    padding-bottom: 10%;
+    font-size: 3vw;
+
 }
 .offers-h6{
     display: inline-block;
     width: fit-content;
+    font-size: 3vw;
 }
 .offer-tick{
     display: inline-block;
     border-radius: 100%;
     background-color: cadetblue;
 }
-.offer-item{
-    margin: auto;
-}
+
 .offers{
     margin:auto;
 }
@@ -357,7 +362,7 @@ margin: 1%;
           padding-top:5%;
           padding-bottom: 5%;
           border: 1px solid #BDBDBD;
-          border-radius: 2%;
+          border-radius: 10% 10% 10% 10% / 100% 100% 100% 100% ;
       }
       .contact-button{
           width:100%;
