--- a/css/layout-xl.css
+++ b/css/layout-xl.css
@@ -292,7 +292,7 @@ font-size: 1.5vw;
 .offer-item{
     width: 100%;
     margin: auto;
-    margin-bottom: 5%;
+    margin-bottom: 10%;
 }
 .offers{
     margin:auto;
@@ -349,13 +349,13 @@ font-size: 1.5vw;
     border-radius: 2%;
   }
   .contact-button{
-      width:90%;
-      padding-top:2.5%;
-      padding-bottom:2.5%;
-      border:none;
-      border-radius: 2%;
-      margin-top: 5%;
-      margin-bottom: 5%;
+    width: 90%;
+    padding-top: 2.5%;
+    padding-bottom: 2.5%;
+    border: none;
+    border-radius: 5% 5% 5% 5% / 100% 100% 100% 100%;
+    margin-top: 5%;
+    margin-bottom: 5%;
 
   }
 /*contact*/
