--- a/css/style-xl.css
+++ b/css/style-xl.css
@@ -13,13 +13,13 @@
   background-repeat: no-repeat;
 }
 .nav-bar-brand {
-  font-size: 1.5rem;
+  font-size: 1.5vw;
   font-weight: bolder;
   color: white;
 }
 .nav-bar-items {
   list-style: none;
-  font-size: 0.9rem;
+  font-size: 0.9vw;
   color: #737373;
 }
 .nav-bar-link {
@@ -36,11 +36,11 @@
   font-weight: bolder;
 }
 .center-headline {
-  font-size: 2.5rem;
+  font-size: 2.5vw;
   text-align: center;
 }
 .header-center-text {
-  font-size: 1.25rem;
+  font-size: 1.25vw;
   text-align: center;
 }
 .header-center-button-left,
@@ -73,11 +73,11 @@
 }
 
 .header-lower-h3 {
-  font-size: 1.5rem;
+  font-size: 1.5vw;
   font-weight: 900;
 }
 .header-lower-p {
-  font-size: 1.25rem;
+  font-size: 1.25vw;
 }
 
 /*header*/
@@ -87,12 +87,12 @@
 }
 .features-item-h5 {
   text-align: center;
-  font-size: 1rem;
+  font-size: 1vw;
   font-weight: bold;
 }
 .feature-item-p {
   text-align: center;
-  font-size: 0.9rem;
+  font-size: 0.9vw;
 }
 /*features*/
 /*testimonials*/
@@ -101,7 +101,7 @@
 }
 .testimonial-header-h2 {
   font-weight: bold;
-  font-size: 2.5rem;
+  font-size: 2.5vw;
   text-align: center;
   margin: 5% auto 5% auto;
 }
@@ -113,7 +113,7 @@
 
 }
 .testimonial-header-p {
-  font-size: 0.9rem;
+  font-size: 0.9vw;
   text-align: center;
   margin: 5% auto 5% auto;
 }
@@ -137,7 +137,7 @@
   text-align: left;
 }
 .links-lower-left {
-  font-size: 1.5rem;
+  font-size: 1.5vw;
   color: white;
   font-weight: bold;
 }
@@ -158,12 +158,12 @@
 /*links*/
 /*pricing*/
 .pricing-header-h2 {
-  font-size: 2.5rem;
+  font-size: 2.5vw;
   text-align: center;
   font-weight: bold;
 }
 .pricing-header-p {
-  font-size: 0.9rem;
+  font-size: 0.9vw;
   text-align: center;
   font-weight: bold;
 }
@@ -171,48 +171,48 @@
   border: 1px solid #23a6f0;
 }
 .pricing-lower-side-h3 {
-  font-size: 1.5rem;
+  font-size: 1.5vw;
   font-weight: bold;
   text-align: center;
 }
 .pricing-lower-middle-h3 {
-  font-size: 1.5rem;
+  font-size: 1.5vw;
   font-weight: bold;
   text-align: center;
 }
 .pricing-lower-side-h5 {
-  font-size: 1rem;
+  font-size: 1vw;
   font-weight: bold;
   text-align: center;
 }
 .pricing-lower-middle-h5 {
-  font-size: 1rem;
+  font-size: 1vw;
   font-weight: bold;
   text-align: center;
 }
 .price-h2 {
-  font-size: 2.5rem;
+  font-size: 2.5vw;
   color: #23a6f0;
 }
 .price-dollar {
-  font-size: 1rem;
+  font-size: 1vw;
   color: #23a6f0;
   font-weight: bolder;
 }
 .time {
-  font-size: 1rem;
+  font-size: 1vw;
   color: #23a6f0;
   font-weight: bolder;
 }
 .offers-h6 {
-  font-size: 0.9rem;
+  font-size: 0.9vw;
   font-weight: bold;
 }
 .pricing-button {
   border: none;
   background-color: #23a6f0;
   color: white;
-  font-size: 0.9rem;
+  font-size: 0.9vw;
   font-weight: bold;
   border-radius: 2%;
 }
@@ -231,12 +231,12 @@
   color: white;
 }
 .contact-upper-left-h2{
-  font-size: 2.5rem;
+  font-size: 2.5vw;
   color: white;
   font-weight: bold;
 }
 .contact-upper-left-p{
-  font-size: 0.9rem;
+  font-size: 0.9vw;
   font-weight: bold;
   color: white;
 }
@@ -265,7 +265,7 @@
   padding: 2%;
 }
 .contact-form-h3{
-  font-size: 2rem;
+  font-size: 2vw;
   font-weight: bolder;
   text-align: center;
   margin: auto;
@@ -275,7 +275,7 @@
   
 }
 .contact-form-tag{
-  font-size: 0.9rem;
+  font-size: 0.9vw;
   font-weight: bolder;
 }
 .contact-button{
@@ -296,13 +296,13 @@
   ;
 }
 .footer-upper-h2{
-  font-size: 1.5rem;
+  font-size: 1.5vw;
   font-weight:bolder;
  margin-top:2%;
  margin-bottom: 2%;
 }
 .footer-upper-p{
-  font-size: 0.9rem;
+  font-size: 0.9vw;
   margin-top:5%;
   margin-bottom:5%;
 }
@@ -323,11 +323,11 @@
   padding-top:5%;
 }
 .footer-col-header{
-  font-size:1rem;
+  font-size:1vw;
   font-weight: bolder;
   }
   .footer-col-li{
-    font-size:0.9rem;
+    font-size:0.9vw;
     font-weight:200;
   }
   .footer-lower{
@@ -367,7 +367,7 @@ h3 {
   font-family: "Montserrat", sans-serif;
   font-family: "Mulish", sans-serif;
   font-family: "Source Sans 3", sans-serif;
-  font-size: 1.5rem;
+  font-size: 1.5vw;
 }
 h5 {
     font-family: "Montserrat", sans-serif;
