--- a/css/layout-l.css
+++ b/css/layout-l.css
@@ -235,8 +235,9 @@ margin: 1%;
     padding-bottom: 2.5%;
     float: left;
     width: 28%;
-    height: 5.7vw;
+    height: 6.4vw;
     font-size: 1.5vw;
+    border-radius: 0% 5% 5% 0% / 95% 5% 5% 100% ;
     }
 .links-lower-text{
     width: 70%;
@@ -245,6 +246,7 @@ margin: 1%;
     float: left;
     height: 2.4vw;
     font-size: 1.5vw;
+    border-radius: 5% 0% 0% 5% / 5% 0% 0% 5% ;
 }
 /*links*/
 /*pricing*/
@@ -431,6 +433,7 @@ font-size: 4vw;
     margin: 0 auto;
     padding-top:5%;
     padding-bottom:10%;
+    font-size: 3vw;
 }
 .footer-lower-left-p{
     margin-top:10%;
@@ -438,5 +441,6 @@ font-size: 4vw;
 }
 .footer-lower-icons{
     margin-right:5%;
+    width: 10%;
 }
 /*footer*/
