--- a/css/layout-sm.css
+++ b/css/layout-sm.css
@@ -284,6 +284,8 @@ padding-bottom:1%;
   }
   .contact-form-h3{
     width: 50%;
+    display: block;
+    margin: auto;
   }
   .contact-form-header{
       margin-top:10%;
