--- a/css/layout-l.css
+++ b/css/layout-l.css
@@ -176,6 +176,7 @@ margin: 1%;
     margin-left:auto;
     margin-top:5%;
     margin-bottom: 5%;
+    padding-bottom:5%;
 }
 .testimonial-image{
     display: block;
